Feature ET-27: Serve Original Product Datasource Over HTTP